--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -85,6 +85,7 @@
 
 .categories__link:hover {
   &::before {
+    right: 45%;
     width: 33px;
     height: 11px;
 
@@ -264,6 +265,7 @@
 
   .categories__list {
     flex-direction: row;
+    flex-wrap: wrap;
 
     margin-top: 74px;
   }
