--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -32,7 +32,7 @@
 
 @media (min-resolution: 144dpi),
   (min-resolution: 1.5dppx) {
-  .main-nav_index {
+  .intro-wrapper {
     background-image: url("../img/index-background-mobile@2x.jpg");
   }
 }
@@ -61,7 +61,9 @@
 }
 
 .intro__choice-program {
-  margin-top: 134px;
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 137px;
 }
 
 @media (min-width: @tablet-width) {
@@ -104,6 +106,9 @@
 
     margin-top: 45px;
     margin-left: 88px;
+
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .intro__image {
@@ -118,34 +123,52 @@
 
 @media (min-width: @desktop-width) {
   .intro {
-    width: 1220px;
+    position: inherit;
+    width: 100%;
 
-    margin-top: -500px;
-
-    background: none;
+    background: linear-gradient(to right, #ffffff 0%, #ffffff 50%, @green-background 50%, @green-background 100%);
   }
 
   .intro-wrapper {
-    margin-left: 82px;
+    width: 480px;
+    margin-left: 122px;
+  }
+
+  .intro-wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    width: 650px;
+    height: 696px;
+    margin-left: 528px;
+
+    background: @green-background;
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-size: cover;
   }
 
   .intro__title {
-    padding-top: 25px;
+    padding-top: 100px;
   }
 
   .intro__choice-program {
     margin-top: 54px;
     margin-bottom: 190px;
-    margin-left: 82px;
+    margin-left: 122px;
   }
 
   .intro__slogan {
     margin-top: 40px;
   }
 
+  .intro__image-wrapper {
+    position: relative;
+  }
+
   .intro__image {
-    top: -54px;
-    left: 452px;
+    top: -260px;
+    left: 490px;
 
     width: 552px;
     height: 499px;
