--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -88,20 +88,6 @@
   .main-nav {
     width: 50%;
     margin: 0;
-  }
-
-  .main-nav_index {
-    height: 696px;
-    background: @green-background;
-    background-image: url("../img/index-background-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-size: auto auto;
-  }
-
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
-    .main-nav_index {
-      background-image: url("../img/index-background-desktop@2x.jpg");
-    }
+    z-index: 2;
   }
 }
