--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 320px;
   margin: 0 auto;
-  margin-top: 10px;
   padding: 0;
 
   font-family: @secondary-font;
@@ -44,6 +43,7 @@
 @media (min-width: @tablet-width) {
   .page-footer {
     width: @tablet-width;
+    padding: 25px 0;
   }
 
   .page-footer__wrapper {
@@ -66,6 +66,7 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     width: @desktop-width;
+    padding: 27px 0;
   }
 
   .page-footer__wrapper {
