--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -44,7 +44,7 @@
     margin-right: 30px;
     display: flex;
     flex-wrap: wrap;
-    width: 439px;
+    width: 441px;
   }
 
   .site-list__item {
@@ -85,12 +85,12 @@
 @media (min-width: @desktop-width) {
   .site-list {
     width: 480px;
-    margin-right: 40px;
+    margin-right: 36px;
     margin-left: auto;
   }
 
   .site-list__item {
-    margin-right: 35px;
+    margin-right: 33px;
     padding-top: 50px;
 
     &:last-child {
@@ -113,7 +113,7 @@
     }
   }
 
-  .site-list__item_index::after {
+  .site-list__item--index::after {
     background: @white-background-color;
   }
 
@@ -121,7 +121,7 @@
     font-size: 20px;
   }
 
-  .site-list__item_index a {
+  .site-list__item--index a {
     color: @white-fontcolor;
   }
 }
