--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -25,33 +25,33 @@
   list-style: none;
 }
 
-.social__link--vkontakte {
+.social__icon--vkontakte {
   width: 22px;
   height: 12px;
   fill: @fill-grey;
 }
 
-.social__link--instagram {
+.social__icon--instagram {
   width: 16px;
   height: 16px;
   fill: @fill-grey;
 }
 
-.social__link--facebook {
+.social__icon--facebook {
   width: 10px;
   height: 19px;
   fill: @fill-grey;
 }
 
-.social__link--vkontakte:hover,
-.social__link--instagram:hover,
-.social__link--facebook:hover {
+.social__icon--vkontakte:hover,
+.social__icon--instagram:hover,
+.social__icon--facebook:hover {
   fill: @bg-site-active;
 }
 
-.social__link--vkontakte:active,
-.social__link--instagram:active,
-.social__link--facebook:active {
+.social__icon--vkontakte:active,
+.social__icon--instagram:active,
+.social__icon--facebook:active {
   opacity: 0.3;
 }
 
@@ -60,17 +60,17 @@
     width: 326px;
   }
 
-  .social__link--vkontakte {
+  .social__icon--vkontakte {
     width: 30px;
     height: 16px;
   }
 
-  .social__link--instagram {
+  .social__icon--instagram {
     width: 23px;
     height: 23px;
   }
 
-  .social__link--facebook {
+  .social__icon--facebook {
     width: 14px;
     height: 28px;
   }
