--- a/source/less/variabless.less
+++ b/source/less/variabless.less
@@ -3,10 +3,12 @@
 @mobile-width-only: 767px;
 @grey-fontcolor: #444444;
 @darkgrey-fontcolor: #111111;
+@light-darkgrey-fontcolor: #222222;
 @white-fontcolor: #ffffff;
 @white-background-color: #ffffff;
 @green-background: #64a83b;
 @grey-background-color: #f2f2f2;
+@darkgrey-background-color: #eaeaea;
 @grey-border-color: #e6e6e6;
 @bg-site-active:#68b738;
 @border-color-category: #d9d9d9;
@@ -18,3 +20,10 @@
 @fill-pf-logo: #111111;
 @fill-ph-logo0: #FDC305;
 @fill-ph-logo1: #F06351;
+
+
+@grey-range: #cdcdcd;
+@toggle-border: #dcdcdc;
+@invalid: #ff8282;
+
+@radio-hover: #bababa;
