--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -121,6 +121,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    width: 708px;
     margin-left: 0;
     margin-top: 42px;
   }
@@ -151,7 +152,7 @@
     content: "";
 
     top: -38px;
-    left: 124px;
+    left: 115px;
     position: absolute;
     z-index: -1;
 
@@ -192,6 +193,7 @@
   }
 
   .advantages__list {
+    width: 1220px;
     margin-left: 0;
     margin-top: 72px;
   }
