--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,8 +1,8 @@
 .button {
   display: inline-block;
   width: 280px;
-  padding-top: 12px;
-  padding-bottom: 10px;
+  padding-top: 11px;
+  padding-bottom: 9px;
 
   font-family: @primaty-font;
   font-size: 16px;
@@ -13,7 +13,7 @@
   text-align: center;
   text-transform: uppercase;
 
-  background-color: @green-background;
+  background-color: @bg-site-active;
 
   border: none;
 }
