--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -34,7 +34,9 @@
   border-bottom: 1px solid @grey-border-color;
 }
 
-.catalog-wrapper {
+.catalog__wrapper {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -57,6 +59,8 @@
 }
 
 .catalog__product-image {
+  position: relative;
+  z-index: 1;
   width: 140px;
   height: 144px;
 
@@ -80,13 +84,12 @@
 @media (min-width: @tablet-width) {
   .catalog {
     width: 708px;
+    margin-top: 24px;
   }
 
   .catalog__list {
     flex-direction: row;
     flex-wrap: wrap;
-
-    margin-top: 24px;
   }
 
   .catalog__item {
@@ -100,7 +103,7 @@
     border: none;
   }
 
-  .catalog-wrapper {
+  .catalog__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -162,13 +165,10 @@
 @media (min-width: @desktop-width) {
   .catalog {
     width: 1220px;
-  }
-
-  .catalog__list {
     margin-top: 14px;
   }
 
-  .catalog-wrapper {
+  .catalog__wrapper {
     width: 245px;
   }
 
