--- a/source/less/blocks/remain.less
+++ b/source/less/blocks/remain.less
@@ -40,7 +40,7 @@
 .remain__description {
   margin: 0;
   margin-top: 8px;
-
+  margin-bottom: 4px;
   font-family: @secondary-font;
   font-size: 12px;
   line-height: 16px;
