--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,7 +3,6 @@
 @import "normalize.less";
 @import "blocks/body.less";
 @import "blocks/button.less";
-@import "blocks/visually-hidden.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
@@ -16,5 +15,13 @@
 @import "blocks/main-nav.less";
 @import "blocks/page-catalog.less";
 @import "blocks/catalog.less";
-@import "blocks/description__list.less";
+@import "blocks/description.less";
 @import "blocks/remain.less";
+@import "blocks/example.less";
+@import "blocks/cooperation.less";
+@import "blocks/catalog-other.less";
+@import "blocks/description-other.less";
+@import "blocks/gift.less";
+@import "blocks/page-form.less";
+@import "blocks/form.less";
+@import "blocks/visually-hidden.less";
