--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -12,7 +12,7 @@
 
 .advantages__title {
   margin: 0;
-  margin-top: 32px;
+  margin-top: 14px;
   padding: 0;
 
   font-size: 36px;
@@ -24,7 +24,7 @@
 .advantages__list {
   margin: 0;
   margin-left: 80px;
-  margin-top: 41px;
+  margin-top: 30px;
   padding: 0;
 
   list-style: none;
@@ -121,8 +121,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    width: 708px;
     margin-left: 0;
-    margin-top: 43px;
+    margin-top: 42px;
   }
 
   .advantages__item {
@@ -133,7 +134,7 @@
 
     margin-top: 31px;
     padding-top: 112px;
-    padding-right: 68px;
+    padding-right: 72px;
 
     font-size: 16px;
     line-height: 24px;
@@ -151,7 +152,7 @@
     content: "";
 
     top: -38px;
-    left: 124px;
+    left: 115px;
     position: absolute;
     z-index: -1;
 
@@ -192,6 +193,7 @@
   }
 
   .advantages__list {
+    width: 1220px;
     margin-left: 0;
     margin-top: 72px;
   }
