--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -30,7 +30,7 @@
 
 .categories__title {
   margin: 0;
-  padding-top: 39px;
+  padding-top: 30px;
   padding-left: 92px;
 
   font-size: 24px;
@@ -41,7 +41,7 @@
 }
 
 .categories__description {
-  margin-top: 40px;
+  margin-top: 27px;
   margin-left: 20px;
   margin-right: 25px;
 
@@ -85,6 +85,7 @@
 
 .categories__link:hover {
   &::before {
+    right: 45%;
     width: 33px;
     height: 11px;
 
@@ -137,7 +138,7 @@
 .categories__item--pro::after {
   content: "";
 
-  top: 35px;
+  top: 33px;
   left: 13px;
   position: absolute;
 
@@ -152,7 +153,7 @@
 .categories__item--pro::before {
   content: "";
 
-  top: 24px;
+  top: 22px;
   left: 22px;
   position: absolute;
 
@@ -185,27 +186,27 @@
 
   .categories__title {
     padding-top: 78px;
-    padding-left: 56px;
+    padding-left: 54px;
 
     font-size: 36px;
   }
 
   .categories__description {
     margin-top: 26px;
-    margin-left: 56px;
-    margin-right: 279px;
+    margin-left: 54px;
+    margin-right: 270px;
 
     font-size: 16px;
     line-height: 24px;
   }
 
   .categories__item--pro .categories__description {
-    margin-right: 308px;
+    margin-right: 312px;
   }
 
   .categories__link {
     margin-top: 54px;
-    margin-left: 57px;
+    margin-left: 56px;
     margin-bottom: 63px;
     padding: 0;
 
@@ -216,8 +217,8 @@
   }
 
   .categories__link::before {
-    top: 6px;
-    left: 127px;
+    top: 5px;
+    left: 128px;
   }
 
   .categories__item--slim::after {
@@ -264,8 +265,9 @@
 
   .categories__list {
     flex-direction: row;
+    flex-wrap: wrap;
 
-    margin-top: 80px;
+    margin-top: 74px;
   }
 
   .categories__item {
@@ -296,11 +298,12 @@
   }
 
   .categories__link {
-    margin-top: 26px;
+    margin-top: 30px;
+    margin-left: 54px;
   }
 
   .categories__item--slim::after {
-    top: 41px;
+    top: 45px;
     left: 66px;
 
     width: 70px;
@@ -308,7 +311,7 @@
   }
 
   .categories__item--slim::before {
-    top: 47px;
+    top: 51px;
     left: 52px;
 
     width: 100px;
@@ -318,7 +321,7 @@
   }
 
   .categories__item--pro::after {
-    top: 69px;
+    top: 73px;
     left: 34px;
 
     width: 134px;
@@ -326,7 +329,7 @@
   }
 
   .categories__item--pro::before {
-    top: 47px;
+    top: 53px;
     left: 52px;
 
     width: 100px;
