--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -123,21 +123,26 @@
 
     width: 708px;
     margin-left: 0;
-    margin-top: 42px;
+    margin-top: 72px;
+    padding-bottom: 102px;
   }
 
   .advantages__item {
     position: relative;
     z-index: 2;
     width: 252px;
-    height: 169px;
 
-    margin-top: 31px;
+    margin-top: 134px;
     padding-top: 112px;
     padding-right: 72px;
 
     font-size: 16px;
     line-height: 24px;
+  }
+
+  .advantages__item:first-child,
+  .advantages__item:nth-child(2) {
+    margin-top: 0;
   }
 
   .advantages__item::after {
@@ -196,15 +201,16 @@
     width: 1220px;
     margin-left: 0;
     margin-top: 72px;
+    padding-bottom: 0;
   }
 
   .advantages__item {
     width: 245px;
-    height: 113px;
+
     margin-top: 0;
     margin-right: 80px;
     padding: 0;
-    padding-top: 117px;
+    padding-top: 112px;
   }
 
   .advantages__item:last-child {
